# wqf7006-msl

./: .gitignore  README.md  directory.py  model.py  pyproject.toml  streamlit_app.py  utils.py
data/: README.md  top30_glosses.txt
docs/: baseline.mmd  bilstm.mmd  transformer.mmd
notebooks/: 1_eda.ipynb  2_first_30_vs_uniform_30.ipynb  3_model_comparison.ipynb  Train_Sign_Language_Model.ipynb  Train_Sign_Language_Model_yl.ipynb  eda.ipynb  msl_code.ipynb
notebooks/archived/: Train_Sign_Language_Model_yl.ipynb  demo.ipynb
pages/: demo.py  index.py
src/wqf7006_msl/: __init__.py
src/wqf7006_msl/scripts/: build_tensors.py  extract_features.py
weights/: baselinelstm_best.pth  bilstmwithattention_best.pth  transformermodel_best.pth
